generate header for grpc client fwd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -430,6 +430,10 @@ if ((VIAMCPPSDK_GRPCXX_VERSION VERSION_GREATER 1.51.1) AND (VIAMCPPSDK_PROTOC_VE
   set(VIAMCPPSDK_BUF_REMOTE_PLUGIN_SUPPORTED 1)
 endif()
 
+if (VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.32.0)
+  set(VIAMCPPSDK_GRPCXX_LEGACY_CLIENT_FWD 1)
+endif()
+
 include(FetchContent)
 
 FetchContent_Declare(
