make service_helper private

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -53,10 +53,10 @@ target_sources(viamsdk
     common/linear_algebra.cpp
     common/pose.cpp
     common/proto_value.cpp
-    common/service_helper.cpp
     common/utils.cpp
     common/version_metadata.cpp
     common/world_state.cpp
+    common/private/service_helper.cpp
     components/arm.cpp
     components/base.cpp
     components/board.cpp
@@ -147,7 +147,6 @@ target_sources(viamsdk
       ../../viam/sdk/common/pose.hpp
       ../../viam/sdk/common/proto_convert.hpp
       ../../viam/sdk/common/proto_value.hpp
-      ../../viam/sdk/common/service_helper.hpp
       ../../viam/sdk/common/utils.hpp
       ../../viam/sdk/common/version_metadata.hpp
       ../../viam/sdk/common/world_state.hpp
