--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -39,8 +39,14 @@ target_sources(viamsdk_test
     test_utils.cpp
 )
 
+target_include_directories(viamsdk_test
+  PUBLIC
+    "$<BUILD_INTERFACE:$<TARGET_PROPERTY:viam-cpp-sdk::viamapi,INTERFACE_INCLUDE_DIRECTORIES>>"
+)
+
 target_link_libraries(viamsdk_test
   PUBLIC viam-cpp-sdk::viamsdk
+  PUBLIC viam-cpp-sdk::viamapi
 )
 
 viamcppsdk_add_boost_test(test_arm.cpp)
