--- a/src/viam/examples/modules/complex/CMakeLists.txt
+++ b/src/viam/examples/modules/complex/CMakeLists.txt
@@ -106,8 +106,9 @@ target_include_directories(complex_module_sources
 )
 target_link_libraries(complex_module_sources
   viam-cpp-sdk::viamsdk
-  viam-cpp-sdk::viamapi
 )
+
+viamcppsdk_link_viam_api(complex_module_sources)
 
 add_executable(complex_module)
 target_sources(complex_module
