RSDK-9707: Make API a private dependency of SDK  (#355)

--- a/src/viam/examples/modules/complex/CMakeLists.txt
+++ b/src/viam/examples/modules/complex/CMakeLists.txt
@@ -108,6 +108,8 @@ target_link_libraries(complex_module_sources
   viam-cpp-sdk::viamsdk
 )
 
+viamcppsdk_link_viam_api(complex_module_sources)
+
 add_executable(complex_module)
 target_sources(complex_module
   PRIVATE
