make google a private dep of the sdk and link grpc to examples where needed

--- a/src/viam/examples/dial_api_key/CMakeLists.txt
+++ b/src/viam/examples/dial_api_key/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(example_dial_api_key
 target_link_libraries(example_dial_api_key
   Boost::program_options
   viam-cpp-sdk::viamsdk
+  ${VIAMCPPSDK_GRPCXX_LIBRARIES}
 )
 
 install(
