--- a/src/viam/config/viam-cpp-sdkConfig.cmake.in
+++ b/src/viam/config/viam-cpp-sdkConfig.cmake.in
@@ -31,6 +31,16 @@ endif()
 # the components, it seems like an easy thing to forget.
 set(_viam-cpp-sdk_supported_components viamapi viamsdk)
 
+# TODO(acm): I also don't like that we need to manually set things up
+# so that asking for viamsdk cause you to ask for viamapi too. I'd
+# expect cmake to know that viamsdk dependson viamapi so asking for the
+# one should force you to get the other. But, it doesn't seem to do
+# that, so force it, and force it ahead of viamsdk so that viamsdk's
+# file can resolve viam-cpp-sdk::viamapi
+if (viamsdk IN_LIST viam-cpp-sdk_FIND_COMPONENTS)
+  LIST(PREPEND viam-cpp-sdk_FIND_COMPONENTS viamapi)
+endif()
+
 foreach(_comp ${viam-cpp-sdk_FIND_COMPONENTS})
   if (NOT _comp IN_LIST _viam-cpp-sdk_supported_components)
     set(viam-cpp-sdk_FOUND False)
