RSDK-9740: Make google libraries a private dependency of the SDK  (#357)

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -236,14 +236,13 @@ target_link_directories(viamsdk
 viamcppsdk_link_viam_api(viamsdk PRIVATE)
 
 target_link_libraries(viamsdk
-  PUBLIC ${VIAMCPPSDK_GRPCXX_LIBRARIES}
-  PUBLIC ${VIAMCPPSDK_GRPC_LIBRARIES}
-  PUBLIC ${VIAMCPPSDK_PROTOBUF_LIBRARIES}
   PUBLIC Boost::headers
   PUBLIC Boost::log
   PUBLIC xtensor
   PRIVATE ${VIAMCPPSDK_GRPCXX_REFLECTION_LIBRARIES}
-  PRIVATE absl::strings
+  PRIVATE ${VIAMCPPSDK_GRPCXX_LIBRARIES}
+  PRIVATE ${VIAMCPPSDK_GRPC_LIBRARIES}
+  PRIVATE ${VIAMCPPSDK_PROTOBUF_LIBRARIES}
   PRIVATE viam_rust_utils
   PRIVATE Threads::Threads
 )
