--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          brew install abseil cmake boost grpc protobuf xtensor
+          brew install cmake boost grpc protobuf xtensor
           brew install pkg-config ninja buf
 
       - name: Setup build directory
@@ -128,7 +128,6 @@ jobs:
               gnupg \
               gpg \
               less \
-              libabsl-dev \
               libboost-all-dev \
               libgrpc++-dev \
               libprotobuf-dev \
@@ -221,7 +220,6 @@ jobs:
               gnupg \
               gpg \
               less \
-              libabsl-dev \
               libboost-all-dev \
               libc-ares-dev \
               libgrpc++-dev \
