--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -213,6 +213,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/robot/v1/robot.grpc.pb.h
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.h
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.grpc.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.grpc.pb.h
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.pb.h
     ${PROTO_GEN_DIR}/service/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/service/generic/v1/generic.grpc.pb.h
     ${PROTO_GEN_DIR}/service/generic/v1/generic.pb.cc
@@ -302,6 +306,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.pb.cc
     ${PROTO_GEN_DIR}/component/gantry/v1/gantry.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/gantry/v1/gantry.pb.cc
+    ${PROTO_GEN_DIR}/component/discovery/v1/discovery.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/discovery/v1/discovery.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/component/gripper/v1/gripper.grpc.pb.cc
@@ -360,6 +366,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/gantry/v1/gantry.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/gantry/v1/gantry.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/discovery/v1/discovery.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/discovery/v1/discovery.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/generic/v1/generic.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/gripper/v1/gripper.grpc.pb.h
