--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -213,6 +213,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/robot/v1/robot.grpc.pb.h
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.cc
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.h
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.grpc.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.grpc.pb.h
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.pb.h
     ${PROTO_GEN_DIR}/service/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/service/generic/v1/generic.grpc.pb.h
     ${PROTO_GEN_DIR}/service/generic/v1/generic.pb.cc
@@ -326,6 +330,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/module/v1/module.pb.cc
     ${PROTO_GEN_DIR}/robot/v1/robot.grpc.pb.cc
     ${PROTO_GEN_DIR}/robot/v1/robot.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.grpc.pb.cc
+    ${PROTO_GEN_DIR}/service/discovery/v1/discovery.pb.cc
     ${PROTO_GEN_DIR}/service/generic/v1/generic.grpc.pb.cc
     ${PROTO_GEN_DIR}/service/generic/v1/generic.pb.cc
     ${PROTO_GEN_DIR}/service/mlmodel/v1/mlmodel.grpc.pb.cc
@@ -385,6 +391,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/robot/v1/robot.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/robot/v1/robot.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/tagger/v1/tagger.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/service/discovery/v1/discovery.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/service/discovery/v1/discovery.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/service/generic/v1/generic.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/service/generic/v1/generic.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/service/mlmodel/v1/mlmodel.grpc.pb.h
