--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -14,6 +14,8 @@ jobs:
       image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GIT_ACCESS_TOKEN }}
       # note (erodkin): these dependencies were cribbed from what we use to build the SDK
       # in the release job. Only very cursory effort was made to prune.
       - name: install dependencies
