--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -77,6 +77,7 @@ jobs:
           body: This is an auto-generated PR to update proto definitions. Check the commits to see which repos and commits are responsible for the changes
           assignees: stuqdog
           reviewers: stuqdog
+          token: ${{ secrets.GIT_ACCESS_TOKEN }}
 
       - name: Notify slack of failure
         uses: slackapi/slack-github-action@v1.24.0
