--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -153,6 +153,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/board/v1/board.grpc.pb.h
     ${PROTO_GEN_DIR}/component/board/v1/board.pb.cc
     ${PROTO_GEN_DIR}/component/board/v1/board.pb.h
+    ${PROTO_GEN_DIR}/component/button/v1/button.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/button/v1/button.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/button/v1/button.pb.cc
+    ${PROTO_GEN_DIR}/component/button/v1/button.pb.h
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.h
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
@@ -300,6 +304,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/base/v1/base.pb.cc
     ${PROTO_GEN_DIR}/component/board/v1/board.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/board/v1/board.pb.cc
+    ${PROTO_GEN_DIR}/component/button/v1/button.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/button/v1/button.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/camera/v1/camera.pb.cc
     ${PROTO_GEN_DIR}/component/encoder/v1/encoder.grpc.pb.cc
@@ -360,6 +366,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/base/v1/base.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/board/v1/board.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/board/v1/board.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/button/v1/button.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/button/v1/button.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/camera/v1/camera.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/encoder/v1/encoder.grpc.pb.h
