--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -129,7 +129,7 @@ jobs:
         shell: bash
         run: |
           conan profile detect
-          conan create . --build=missing -s compiler.cppstd=14 -a:s compiler.cppstd=14 -o "abseil/*:shared=True"
+          conan create . --build=missing -s compiler.cppstd=14 -s:a compiler.cppstd=14 -o "abseil/*:shared=True"
 
   build_linux_debian:
     if: github.repository_owner == 'viamrobotics'
@@ -205,4 +205,4 @@ jobs:
 
           pip install conan
           conan profile detect
-          conan create . --build=missing -s compiler.cppstd=14 -a:s compiler.cppstd=14 -o "abseil/*:shared=True"
+          conan create . --build=missing -s compiler.cppstd=14 -s:a compiler.cppstd=14 -o "abseil/*:shared=True"
