--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -197,6 +197,10 @@ if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
     ${PROTO_GEN_DIR}/component/servo/v1/servo.grpc.pb.h
     ${PROTO_GEN_DIR}/component/servo/v1/servo.pb.cc
     ${PROTO_GEN_DIR}/component/servo/v1/servo.pb.h
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.grpc.pb.h
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.pb.cc
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.pb.h
     ${PROTO_GEN_DIR}/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/google/api/annotations.pb.h
     ${PROTO_GEN_DIR}/google/api/httpbody.pb.cc
@@ -322,6 +326,8 @@ target_sources(viamapi
     ${PROTO_GEN_DIR}/component/sensor/v1/sensor.pb.cc
     ${PROTO_GEN_DIR}/component/servo/v1/servo.grpc.pb.cc
     ${PROTO_GEN_DIR}/component/servo/v1/servo.pb.cc
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.grpc.pb.cc
+    ${PROTO_GEN_DIR}/component/switch/v1/switch.pb.cc
     ${PROTO_GEN_DIR}/google/api/annotations.pb.cc
     ${PROTO_GEN_DIR}/google/api/http.pb.cc
     ${PROTO_GEN_DIR}/google/api/httpbody.pb.cc
@@ -382,6 +388,8 @@ target_sources(viamapi
       ${PROTO_GEN_DIR}/../../viam/api/component/sensor/v1/sensor.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/servo/v1/servo.grpc.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/component/servo/v1/servo.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/switch/v1/switch.grpc.pb.h
+      ${PROTO_GEN_DIR}/../../viam/api/component/switch/v1/switch.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/annotations.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/http.pb.h
       ${PROTO_GEN_DIR}/../../viam/api/google/api/httpbody.pb.h
