--- a/src/viam/sdk/tests/CMakeLists.txt
+++ b/src/viam/sdk/tests/CMakeLists.txt
@@ -36,6 +36,7 @@ target_sources(viamsdk_test
     mocks/mock_power_sensor.cpp
     mocks/mock_sensor.cpp
     mocks/mock_servo.cpp
+    mocks/mock_switch.cpp
     mocks/mock_robot.cpp
     test_utils.cpp
 )
@@ -74,4 +75,5 @@ viamcppsdk_add_boost_test(test_proto_value_visit.cpp)
 viamcppsdk_add_boost_test(test_resource.cpp)
 viamcppsdk_add_boost_test(test_sensor.cpp)
 viamcppsdk_add_boost_test(test_servo.cpp)
+viamcppsdk_add_boost_test(test_switch.cpp)
 viamcppsdk_add_boost_test(test_robot.cpp)
