[RSDK-10385] Basic windows and macos build compatibility improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,10 @@ if (VIAMCPPSDK_ENFORCE_COMPILER_MINIMA)
     if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10.0)
       message(FATAL_ERROR "Insufficient Apple clang version: XCode 10.0+ required")
     endif()
+  elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.34)
+      message(FATAL_ERROR "Insufficient MSVC version: Visual Studio 2022 17.4 (MSVC 19.34) or later is required")
+    endif()
   else()
     message(FATAL_ERROR "Unknown / untested compiler ${CMAKE_CXX_COMPILER_ID}")
   endif()
